# Feishu_Leave_Reporter

./: .env.example  .gitignore  README.md  feishu_permissions.import.json  pyproject.toml
launchd/: com.ggbond.feishu-leave-sync.plist.template
scripts/: install_launchd.sh  run_service.sh  uninstall_launchd.sh
src/feishu_leave_sync/: __init__.py  api.py  config.py  db.py  logging_utils.py  main.py  models.py  parsers.py  reports.py  service.py
tests/: test_api.py  test_parsers.py  test_reports.py  test_service.py
