[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "feishu-leave-sync"
version = "0.1.0"
description = "Automatically sync approved Feishu leave requests into Feishu time-off calendar events."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27,<1.0",
  "lark-oapi>=1.4.15",
  "python-socks>=2.5,<3.0",
]

[project.scripts]
feishu-leave-sync = "feishu_leave_sync.main:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/feishu_leave_sync"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
  "error",
]
